# freeipa_server

./: .ansible-lint  .gitignore  .yamllint  README.md  galaxy.yml  pyproject.toml  requirements-dev.txt  requirements-monorepo.yml  requirements-standalone.yml  requirements.txt  tox.ini
.ansible/collections/ansible_collections/tcharl/freeipa_server/: .ansible-lint  .gitignore  FILES.json  MANIFEST.json
.ansible/collections/ansible_collections/tcharl/freeipa_server/defaults/: main.yml
.ansible/collections/ansible_collections/tcharl/freeipa_server/meta/: main.yml
.ansible/collections/ansible_collections/tcharl/freeipa_server/tasks/: freeipa-server.yml  main.yml  prereq.yml
.github/workflows/: molecule.yml
.tox/test-exec-monorepo/: .tox-info.json
defaults/: main.yml
molecule/default/: converge.yml  molecule.yml
molecule/default/tests/: test_default.py
tasks/: facts.yml  freeipa-server.yml  main.yml  prereq.yml  requirements.yml
vars/: main.yml
