[tool.poetry]
name = "tcharl.freeipa_server"
version = "0.1.0"
description = "Freeipa server configuration with a minimum of parameter"
authors = ["Charlie Mordant <cmordant1@gmail.com>"]
license = "Apache2"
readme = "README.md"
include = ["defaults", "files", "handlers", "meta", "tasks", "templates", "vars"]
packages = [
    {include = "meta/**/*.py"}
]

[tool.poetry.dependencies]
python = ">3.10"
ansible = "^9.1.0"
jmespath = "^1.0.1"
netaddr = "^0.8.0"

[tool.poetry.group.dev.dependencies]
flake8 = "*"
yamllint = "*"
pytest-testinfra = "*"
molecule-plugins = {version = "*", extras = ["podman"]}
ansible-lint = {version = "^v6.22.1", markers = "platform_system != 'Windows'" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
